# stock-trader

./: .bazelrc  .editorconfig  .envrc  .gitignore  BUILD.bazel  Directory.Build.props  README.md  SimpleCqrs.sln  StockTrader.DotSettings  StockTrader.sln  StockTrader.sln.DotSettings  Tiltfile  WORKSPACE  devcluster.yaml  docker-compose.yml
apps/brokerage-api/: BUILD.bazel  Tiltfile
apps/brokerage-api/.k8s/: deployment.yaml
apps/brokerage-api/src/: go.mod  hello.go  hello_test.go  main.go
apps/portfolios-api/: .gitignore  BUILD.bazel  Tiltfile  deps.bzl  deps.json  dotnet_add_package.sh
apps/portfolios-api/.config/: dotnet-tools.json
apps/portfolios-api/.k8s/: deployment.yaml
apps/portfolios-api/src/: Directory.Build.props  StockTrader.Portfolios.Api.sln  StockTrader.sln  StockTrader.sln.DotSettings
apps/portfolios-api/src/StockTrader.Api/: StockTrader.Api.csproj  appsettings.Development.json  appsettings.Test.json
apps/portfolios-api/src/StockTrader.Portfolios.Api/: Library.cs  Program.cs  StockTrader.Portfolios.Api.csproj  WeatherForecast.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api.DependencyInjection/: MvcBuilderExtensions.cs  StockTrader.Portfolios.Api.DependencyInjection.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Api.IntegrationTests/: TestHostCollectionFixture.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api.IntegrationTests/Commands/: ClosePortfolioEndpointTests.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api.IntegrationTests/Queries/: GetPortfolioDetailEndpointTests.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api.Tests/: StockTrader.Portfolios.Api.Tests.csproj  UnitTest1.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api/Commands/: ClosePortfolioEndpoint.cs  OpenPortfolioEndpoint.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api/Controllers/: WeatherForecastController.cs
apps/portfolios-api/src/StockTrader.Portfolios.Api/Properties/: launchSettings.json
apps/portfolios-api/src/StockTrader.Portfolios.Application/: StockTrader.Portfolios.Application.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Application.DependencyInjection/: ServiceCollectionExtensions.cs
apps/portfolios-api/src/StockTrader.Portfolios.Application/Commands/: ClosePortfolioHandler.cs  OpenPortfolioHandler.cs
apps/portfolios-api/src/StockTrader.Portfolios.Domain/: AssemblyInfo.cs  PortfolioCommand.cs  PortfolioEvent.cs  PortfolioEventMetadata.cs  PortfolioFactory.cs  PortfolioFailure.cs  PortfolioId.cs  PortfolioSnapshot.cs  StockTrader.Portfolios.Domain.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Domain.UnitTests/Commands/: ClosePortfolioTests.cs  OpenPortfolioTests.cs
apps/portfolios-api/src/StockTrader.Portfolios.Domain/Commands/: OpenPortfolio.cs  PlaceOrder.cs
apps/portfolios-api/src/StockTrader.Portfolios.Domain/Events/: SharesCredited.cs
apps/portfolios-api/src/StockTrader.Portfolios.Persistence/: Library.cs  PortfolioSqlRepository.cs  StockTrader.Portfolios.Persistence.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Persistence.Migrations/: 20211014003648_CreatePortfolio.Designer.cs  20211014003648_CreatePortfolio.cs  20211014003842_CreateHolding.cs  PortfoliosSqlWriteContextFactory.cs  StockTrader.Portfolios.Persistence.Migrations.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Projection.Sql/: Library.cs  StockTrader.Portfolios.Projection.Sql.csproj
apps/portfolios-api/src/StockTrader.Portfolios.Projection.Sql.Migrations/: 00000000000000_Initial.Designer.cs  00000000000000_Initial.cs  20211223193543_CreatePortfolioDetail.cs  PortfoliosSqlReadContextModelSnapshot.cs  StockTrader.Portfolios.Projection.Sql.Migrations.csproj
apps/portfolios-api/src/StockTrader.Shared.Api.Testing/: QueryEndpointTests.cs  StockTrader.Shared.Api.Testing.csproj
apps/portfolios-api/src/StockTrader.Shared.Domain/: DomainEventDescriptor.cs  Entity.cs  IAggregateRoot.cs  IDomainEvent.cs  IDomainEventDescriptor.cs  IDomainFailure.cs  IEntity.cs  IEventSourced.cs  Identifier.cs  UnaryValueObject.cs
apps/portfolios-api/src/StockTrader.Shared.Infrastructure/: Library.cs
(+538 files in other folders)
