load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

go_image(
    name = "image",
    base = "@go_base//image",
    embed = [":library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

go_binary(
    name = "binary",
    embed = [":library"],
)

go_test(
    name = "unit_tests",
    srcs = glob(["src/**/*_test.go"]),
    embed = [":library"],
)

k8s_deploy(
    name = "deploy",
    template = ".k8s/deployment.yaml",
)

go_library(
    name = "library",
    srcs = glob(
        ["src/**/*.go"],
        exclude = ["src/**/*_test.go"],
    ),
    importpath = "github.com/maximegel/stock-trader/brokerage-api",
    visibility = ["//visibility:private"],
)
